--- a/Intervar/requirements.txt
+++ b/Intervar/requirements.txt
@@ -1,5 +1,14 @@
+Babel==2.2.0
+Flask==0.10.1
 Flask-Login==0.3.2
 Flask-SQLAlchemy==2.1
-Flask-WTF==0.12
 Flask-Table==0.2.9
-Weasyprint & all dependencies “sudo port install py27-pip py27-lxml cairo pango gdk-pixbuf2 libffi”
+Flask-WTF==0.12
+itsdangerous==0.24
+Jinja2==2.8
+MarkupSafe==0.23
+pytz==2016.1
+SQLAlchemy==1.0.12
+Werkzeug==0.11.4
+WTForms==2.1
+
