Ignored venv-files

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,31 @@ local_settings.py
 db.sqlite3
 media
 
+
+venv/bin/activate
+
+venv/pip-selfcheck.json
+
+venv/bin/activate_this.py
+
+venv/bin/activate.fish
+
+venv/bin/activate.csh
+
+venv/bin/easy_install
+
+*.7
+
+venv/bin/pip
+
+venv/bin/pip2
+
+venv/bin/pybabel
+
+venv/bin/python-config
+
+venv/bin/python
+
+venv/bin/wheel
+
+venv/bin/python2
